--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.32.Final</version>
     </dependency>
   </dependencies>
 
